src/app/footer/footer.component.css
.copyright-footer {
  position: relative;
  width: 100%;
  height: 36px;
  background-color: #232323;
}

.timpcon-copyright-note {
  position: absolute;
  width: 100%;
  margin-top: 9px;
  font-family: Montserrat;
  font-size: 13px;
  text-align: center;
  color: #ebbc1d;
}

.mountains-footer {
  position:relative;
  height: 195px;
  background-repeat:repeat-x;
  z-index: -1;
}

.timpcon-banner {
  margin-bottom: -20px;
  margin-left:150px;
  position: relative;
}

.ready-to-play-block {
  height: 250px;
}

.navbar {
  z-index: 50;
  margin-bottom: -150px;
}
.navbar-nav a {
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 500 !important;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal !important;
  color: #232323;
  padding-right: 40px !important;
  padding-left: 40px !important;
}

.btn-outline-warning {
	border-color: #f89f20 !important;
  color: #f89f20 !important;
  font-family: Montserrat !important;
  font-size: 15px !important;
  font-weight: 500 !important;
  border-width: 2px !important;
  padding: 10px !important;
  border-radius: 0px !important;
}

.btn-outline-warning:hover {
  background-color: #f89f20 !important;
  color: #ffffff !important
}

.btn-outline-warning:focus {
  box-shadow: none !important;
}

.Get-Ready-to-Play {
  width: 135px !important;
  height: 72px !important;
  font-family: Montserrat !important;
  font-size: 24px !important;
  font-weight: bold !important;
  font-style: normal !important;
  font-stretch: normal !important;
  line-height: 1.29 !important;
  letter-spacing: normal !important;
  color: #233042 !important;
}

.October-19-20-Provo {
  width: 140px !important;
  height: 49px !important;
  font-family: Montserrat !important;
  font-size: 20px !important;
  font-weight: normal !important;
  font-style: normal !important;
  font-stretch: normal !important;
  line-height: normal !important;
  letter-spacing: normal !important;
  color: #233042 !important;
}
.October-19-20-Provo .text-style-1 {
  font-size: 15px !important;
  color: #307dc0 !important;
}

.separator {
  width: 1px !important;
  height: 59px !important;
  background-color: #979797;
  margin-right: 45px;
  margin-left: 45px;
}

